--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#579C3B</color>
+    <color name="colorPrimaryDark">#579C3B</color>
+    <color name="colorAccent">#6db94b</color>
+    <color name="windowBackground">#ffffff</color>
+
+    <color name="drawer_text">#4c4c4c</color>
+    <color name="underline">#d8d8d8</color>
+
+    <color name="black_overlay">#66000000</color>
     <color name="red">#ea1a21</color>
 </resources>
