--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".RegisterActivity">
 
     <android.support.design.widget.TextInputLayout
@@ -14,15 +14,16 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="43dp"
         android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp">
+        android:layout_marginRight="70dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
-        android:inputType="textEmailAddress"
-         />
+        android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -33,7 +34,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="129dp"
         android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp">
+        android:layout_marginRight="70dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/password"
