--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,11 @@
             android:title="@string/profile" />
 
         <item
+            android:id="@+id/nav_map"
+            android:icon="@android:drawable/ic_menu_mapmode"
+            android:title="@string/title_activity_maps" />
+
+        <item
             android:id="@+id/login"
             android:icon="@drawable/ic_account_circle"
             android:visible="false"
