--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,7 +18,7 @@
             android:layout_width="88dp"
             android:layout_height="90dp"
             android:layout_marginTop="46dp"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@drawable/avatar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
             app:riv_border_width="1dip"
             app:riv_corner_radius="45dip"
             app:riv_mutate_background="true"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameTextInputLayout"
