--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--Хоть это и автосгенерированные размеры, названы они некорректно)
+    Лучше в названии размерностей не привязываться жестко горизонтальная она или вертикальная.
+    Лучше просто указать margin_medium. Так будет проще переиспользовать-->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
